compiler/tests-spec/testData/codegen/box/notLinked/objects/inheritance/neg/10.kt
/*
 * KOTLIN CODEGEN BOX NOT LINKED SPEC TEST (NEGATIVE)
 *
 * SECTIONS: objects, inheritance
 * NUMBER: 10
 * DESCRIPTION: Access to class members in the super constructor call of an object.
 * UNEXPECTED BEHAVIOUR
 * ISSUES: KT-25289
 * EXCEPTION: runtime
 */

open class Foo(a: Any) {
    object A : Foo(B)
    object B : Foo(A)
}

fun box(): String? {
    if (Foo.A == null) return null

    return "OK"
}
